Fixed spacing issue in section 4 Home

--- a/css/styles.css
+++ b/css/styles.css
@@ -1476,13 +1476,17 @@ p, button {
         height: 200px;
     }
 
+    #section-4-home > div:nth-child(2) p {
+        margin-top: -20px;
+    }
+
     #section-4-home button {
         margin-top: -40px;
     }
 
     #section-4-home h2 {
         left: -250px;
-        margin-top: 290px;
+        margin-top: 275px;
         font-size: 50px;
     }
 }
